# web_backend_tests

./: .gitignore
alpine-swift-htmx/.build/arm64-apple-macosx/debug/AppTests.build/: output-file-map.json
go-alpine-htmx/: index.html  main.go
laravel-alpine-htmx/: package-lock.json
laravel-alpine-htmx/app/Models/: Todo.php
laravel-alpine-htmx/resources/views/: index.blade.php  todo.blade.php
laravel-alpine-htmx/routes/: web.php
rust-alpine-htmx/: Cargo.toml
rust-alpine-htmx/src/: main.rs
rust-alpine-htmx/templates/: index.html  todo.html
swift-alpine-htmx/: Package.resolved  Package.swift  docker-compose.yml
swift-alpine-htmx/.build/: workspace-state.json
swift-alpine-htmx/.build/arm64-apple-macosx/debug/Algorithms.build/: module.modulemap
swift-alpine-htmx/.build/repositories/async-http-client-afefb790/: packed-refs
swift-alpine-htmx/.build/repositories/leaf-kit-02997cb7/: packed-refs
swift-alpine-htmx/.build/repositories/multipart-kit-703055f4/: packed-refs
swift-alpine-htmx/.build/repositories/swift-asn1-7065ad2c/: FETCH_HEAD  packed-refs
swift-alpine-htmx/.build/repositories/swift-crypto-7e0614ea/: FETCH_HEAD  packed-refs
swift-alpine-htmx/.build/repositories/swift-http-types-ddff8b60/: FETCH_HEAD  packed-refs
swift-alpine-htmx/.build/repositories/swift-nio-a9bb6d62/: packed-refs
swift-alpine-htmx/Resources/Views/: index.leaf  todo.leaf
swift-alpine-htmx/Sources/App/: configure.swift  routes.swift
swift-alpine-htmx/Sources/App/Controllers/: TodoController.swift
swift-alpine-htmx/Sources/App/Models/: Todo.swift
(+296 files in other folders)
