[package]
name = "rust-alpine-htmx"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
actix-web = "4"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.3.0", features = ["fs", "trace"] }